tests/ui/associated-type-bounds/duplicate.stderr
error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:6:36
   |
LL | struct SI1<T: Iterator<Item: Copy, Item: Send>> {
   |                        ----------  ^^^^^^^^^^ re-bound here
   |                        |
   |                        `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:10:36
   |
LL | struct SI2<T: Iterator<Item: Copy, Item: Copy>> {
   |                        ----------  ^^^^^^^^^^ re-bound here
   |                        |
   |                        `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:14:39
   |
LL | struct SI3<T: Iterator<Item: 'static, Item: 'static>> {
   |                        -------------  ^^^^^^^^^^^^^ re-bound here
   |                        |
   |                        `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:20:29
   |
LL |     T: Iterator<Item: Copy, Item: Send>,
   |                 ----------  ^^^^^^^^^^ re-bound here
   |                 |
   |                 `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:27:29
   |
LL |     T: Iterator<Item: Copy, Item: Copy>,
   |                 ----------  ^^^^^^^^^^ re-bound here
   |                 |
   |                 `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:34:32
   |
LL |     T: Iterator<Item: 'static, Item: 'static>,
   |                 -------------  ^^^^^^^^^^^^^ re-bound here
   |                 |
   |                 `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:40:34
   |
LL | enum EI1<T: Iterator<Item: Copy, Item: Send>> {
   |                      ----------  ^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:44:34
   |
LL | enum EI2<T: Iterator<Item: Copy, Item: Copy>> {
   |                      ----------  ^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:48:37
   |
LL | enum EI3<T: Iterator<Item: 'static, Item: 'static>> {
   |                      -------------  ^^^^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:54:29
   |
LL |     T: Iterator<Item: Copy, Item: Send>,
   |                 ----------  ^^^^^^^^^^ re-bound here
   |                 |
   |                 `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:61:29
   |
LL |     T: Iterator<Item: Copy, Item: Copy>,
   |                 ----------  ^^^^^^^^^^ re-bound here
   |                 |
   |                 `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:68:32
   |
LL |     T: Iterator<Item: 'static, Item: 'static>,
   |                 -------------  ^^^^^^^^^^^^^ re-bound here
   |                 |
   |                 `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:74:35
   |
LL | union UI1<T: Iterator<Item: Copy, Item: Send>> {
   |                       ----------  ^^^^^^^^^^ re-bound here
   |                       |
   |                       `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:78:35
   |
LL | union UI2<T: Iterator<Item: Copy, Item: Copy>> {
   |                       ----------  ^^^^^^^^^^ re-bound here
   |                       |
   |                       `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:82:38
   |
LL | union UI3<T: Iterator<Item: 'static, Item: 'static>> {
   |                       -------------  ^^^^^^^^^^^^^ re-bound here
   |                       |
   |                       `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:88:29
   |
LL |     T: Iterator<Item: Copy, Item: Send>,
   |                 ----------  ^^^^^^^^^^ re-bound here
   |                 |
   |                 `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:95:29
   |
LL |     T: Iterator<Item: Copy, Item: Copy>,
   |                 ----------  ^^^^^^^^^^ re-bound here
   |                 |
   |                 `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:102:32
   |
LL |     T: Iterator<Item: 'static, Item: 'static>,
   |                 -------------  ^^^^^^^^^^^^^ re-bound here
   |                 |
   |                 `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:108:32
   |
LL | fn FI1<T: Iterator<Item: Copy, Item: Send>>() {}
   |                    ----------  ^^^^^^^^^^ re-bound here
   |                    |
   |                    `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:110:32
   |
LL | fn FI2<T: Iterator<Item: Copy, Item: Copy>>() {}
   |                    ----------  ^^^^^^^^^^ re-bound here
   |                    |
   |                    `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:112:35
   |
LL | fn FI3<T: Iterator<Item: 'static, Item: 'static>>() {}
   |                    -------------  ^^^^^^^^^^^^^ re-bound here
   |                    |
   |                    `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:116:29
   |
LL |     T: Iterator<Item: Copy, Item: Send>,
   |                 ----------  ^^^^^^^^^^ re-bound here
   |                 |
   |                 `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:122:29
   |
LL |     T: Iterator<Item: Copy, Item: Copy>,
   |                 ----------  ^^^^^^^^^^ re-bound here
   |                 |
   |                 `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:128:32
   |
LL |     T: Iterator<Item: 'static, Item: 'static>,
   |                 -------------  ^^^^^^^^^^^^^ re-bound here
   |                 |
   |                 `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:133:42
   |
LL | fn FRPIT1() -> impl Iterator<Item: Copy, Item: Send> {
   |                              ----------  ^^^^^^^^^^ re-bound here
   |                              |
   |                              `Item` bound here first

error[E0282]: type annotations needed
  --> $DIR/duplicate.rs:135:5
   |
LL |     iter::empty()
   |     ^^^^^^^^^^^ cannot infer type of the type parameter `T` declared on the function `empty`
   |
help: consider specifying the generic argument
   |
LL |     iter::empty::<T>()
   |                +++++

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:138:42
   |
LL | fn FRPIT2() -> impl Iterator<Item: Copy, Item: Copy> {
   |                              ----------  ^^^^^^^^^^ re-bound here
   |                              |
   |                              `Item` bound here first

error[E0282]: type annotations needed
  --> $DIR/duplicate.rs:140:5
   |
LL |     iter::empty()
   |     ^^^^^^^^^^^ cannot infer type of the type parameter `T` declared on the function `empty`
   |
help: consider specifying the generic argument
   |
LL |     iter::empty::<T>()
   |                +++++

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:143:45
   |
LL | fn FRPIT3() -> impl Iterator<Item: 'static, Item: 'static> {
   |                              -------------  ^^^^^^^^^^^^^ re-bound here
   |                              |
   |                              `Item` bound here first

error[E0282]: type annotations needed
  --> $DIR/duplicate.rs:145:5
   |
LL |     iter::empty()
   |     ^^^^^^^^^^^ cannot infer type of the type parameter `T` declared on the function `empty`
   |
help: consider specifying the generic argument
   |
LL |     iter::empty::<T>()
   |                +++++

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:148:40
   |
LL | fn FAPIT1(_: impl Iterator<Item: Copy, Item: Send>) {}
   |                            ----------  ^^^^^^^^^^ re-bound here
   |                            |
   |                            `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:150:40
   |
LL | fn FAPIT2(_: impl Iterator<Item: Copy, Item: Copy>) {}
   |                            ----------  ^^^^^^^^^^ re-bound here
   |                            |
   |                            `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:152:43
   |
LL | fn FAPIT3(_: impl Iterator<Item: 'static, Item: 'static>) {}
   |                            -------------  ^^^^^^^^^^^^^ re-bound here
   |                            |
   |                            `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:155:35
   |
LL | type TAI1<T: Iterator<Item: Copy, Item: Send>> = T;
   |                       ----------  ^^^^^^^^^^ re-bound here
   |                       |
   |                       `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:157:35
   |
LL | type TAI2<T: Iterator<Item: Copy, Item: Copy>> = T;
   |                       ----------  ^^^^^^^^^^ re-bound here
   |                       |
   |                       `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:159:38
   |
LL | type TAI3<T: Iterator<Item: 'static, Item: 'static>> = T;
   |                       -------------  ^^^^^^^^^^^^^ re-bound here
   |                       |
   |                       `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:163:29
   |
LL |     T: Iterator<Item: Copy, Item: Send>,
   |                 ----------  ^^^^^^^^^^ re-bound here
   |                 |
   |                 `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:168:29
   |
LL |     T: Iterator<Item: Copy, Item: Copy>,
   |                 ----------  ^^^^^^^^^^ re-bound here
   |                 |
   |                 `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:173:32
   |
LL |     T: Iterator<Item: 'static, Item: 'static>,
   |                 -------------  ^^^^^^^^^^^^^ re-bound here
   |                 |
   |                 `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:177:36
   |
LL | type ETAI1<T: Iterator<Item: Copy, Item: Send>> = impl Copy;
   |                        ----------  ^^^^^^^^^^ re-bound here
   |                        |
   |                        `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:179:36
   |
LL | type ETAI2<T: Iterator<Item: Copy, Item: Copy>> = impl Copy;
   |                        ----------  ^^^^^^^^^^ re-bound here
   |                        |
   |                        `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:181:39
   |
LL | type ETAI3<T: Iterator<Item: 'static, Item: 'static>> = impl Copy;
   |                        -------------  ^^^^^^^^^^^^^ re-bound here
   |                        |
   |                        `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:183:40
   |
LL | type ETAI4 = impl Iterator<Item: Copy, Item: Send>;
   |                            ----------  ^^^^^^^^^^ re-bound here
   |                            |
   |                            `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:185:40
   |
LL | type ETAI5 = impl Iterator<Item: Copy, Item: Copy>;
   |                            ----------  ^^^^^^^^^^ re-bound here
   |                            |
   |                            `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:187:43
   |
LL | type ETAI6 = impl Iterator<Item: 'static, Item: 'static>;
   |                            -------------  ^^^^^^^^^^^^^ re-bound here
   |                            |
   |                            `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:190:36
   |
LL | trait TRI1<T: Iterator<Item: Copy, Item: Send>> {}
   |                        ----------  ^^^^^^^^^^ re-bound here
   |                        |
   |                        `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:192:36
   |
LL | trait TRI2<T: Iterator<Item: Copy, Item: Copy>> {}
   |                        ----------  ^^^^^^^^^^ re-bound here
   |                        |
   |                        `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:194:39
   |
LL | trait TRI3<T: Iterator<Item: 'static, Item: 'static>> {}
   |                        -------------  ^^^^^^^^^^^^^ re-bound here
   |                        |
   |                        `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:196:34
   |
LL | trait TRS1: Iterator<Item: Copy, Item: Send> {}
   |                      ----------  ^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:196:34
   |
LL | trait TRS1: Iterator<Item: Copy, Item: Send> {}
   |                      ----------  ^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:196:34
   |
LL | trait TRS1: Iterator<Item: Copy, Item: Send> {}
   |                      ----------  ^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:200:34
   |
LL | trait TRS2: Iterator<Item: Copy, Item: Copy> {}
   |                      ----------  ^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:200:34
   |
LL | trait TRS2: Iterator<Item: Copy, Item: Copy> {}
   |                      ----------  ^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:200:34
   |
LL | trait TRS2: Iterator<Item: Copy, Item: Copy> {}
   |                      ----------  ^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:204:37
   |
LL | trait TRS3: Iterator<Item: 'static, Item: 'static> {}
   |                      -------------  ^^^^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:204:37
   |
LL | trait TRS3: Iterator<Item: 'static, Item: 'static> {}
   |                      -------------  ^^^^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:204:37
   |
LL | trait TRS3: Iterator<Item: 'static, Item: 'static> {}
   |                      -------------  ^^^^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:210:29
   |
LL |     T: Iterator<Item: Copy, Item: Send>,
   |                 ----------  ^^^^^^^^^^ re-bound here
   |                 |
   |                 `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:216:29
   |
LL |     T: Iterator<Item: Copy, Item: Copy>,
   |                 ----------  ^^^^^^^^^^ re-bound here
   |                 |
   |                 `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:222:32
   |
LL |     T: Iterator<Item: 'static, Item: 'static>,
   |                 -------------  ^^^^^^^^^^^^^ re-bound here
   |                 |
   |                 `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:228:32
   |
LL |     Self: Iterator<Item: Copy, Item: Send>,
   |                    ----------  ^^^^^^^^^^ re-bound here
   |                    |
   |                    `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:228:32
   |
LL |     Self: Iterator<Item: Copy, Item: Send>,
   |                    ----------  ^^^^^^^^^^ re-bound here
   |                    |
   |                    `Item` bound here first
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:228:32
   |
LL |     Self: Iterator<Item: Copy, Item: Send>,
   |                    ----------  ^^^^^^^^^^ re-bound here
   |                    |
   |                    `Item` bound here first
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:236:32
   |
LL |     Self: Iterator<Item: Copy, Item: Copy>,
   |                    ----------  ^^^^^^^^^^ re-bound here
   |                    |
   |                    `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:236:32
   |
LL |     Self: Iterator<Item: Copy, Item: Copy>,
   |                    ----------  ^^^^^^^^^^ re-bound here
   |                    |
   |                    `Item` bound here first
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:236:32
   |
LL |     Self: Iterator<Item: Copy, Item: Copy>,
   |                    ----------  ^^^^^^^^^^ re-bound here
   |                    |
   |                    `Item` bound here first
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:244:35
   |
LL |     Self: Iterator<Item: 'static, Item: 'static>,
   |                    -------------  ^^^^^^^^^^^^^ re-bound here
   |                    |
   |                    `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:244:35
   |
LL |     Self: Iterator<Item: 'static, Item: 'static>,
   |                    -------------  ^^^^^^^^^^^^^ re-bound here
   |                    |
   |                    `Item` bound here first
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:244:35
   |
LL |     Self: Iterator<Item: 'static, Item: 'static>,
   |                    -------------  ^^^^^^^^^^^^^ re-bound here
   |                    |
   |                    `Item` bound here first
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:251:34
   |
LL |     type A: Iterator<Item: Copy, Item: Send>;
   |                      ----------  ^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:255:34
   |
LL |     type A: Iterator<Item: Copy, Item: Copy>;
   |                      ----------  ^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:259:37
   |
LL |     type A: Iterator<Item: 'static, Item: 'static>;
   |                      -------------  ^^^^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first

error: aborting due to 72 previous errors

Some errors have detailed explanations: E0282, E0719.
For more information about an error, try `rustc --explain E0282`.
